fixed puzzle list overlap with board

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,8 @@
   margin: auto;
   /* width: 50%; */
   width:1000px;
-  padding:100px;
+  height:500px;
+  padding:10%;
   display: block;
   
 }
